Agrega estilos y título

--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div class="keys">
+			<h1>Virtual Drum Machine</h1>
 			<div data-key="65" class="key">
 				<kbd>A</kbd>
 				<span class="sound">clap</span>
