--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -96,6 +96,14 @@
 			// Alternativa mas corta
 			const ordered = inventors.sort((a, b) => (a.year > b.year ? 1 : -1));
 			console.table(ordered);
+			const ordered2 = inventors.sort(function(a, b) {
+				if (a.year > b.year) {
+					return 1;
+				} else {
+					return -1;
+				}
+			});
+			console.table(ordered2);
 
 			// Pasa por todos mis elementos del array y realiza una operación y concluye todo en
 			// una variable counter/total/whatevs. El ", 0" es para setear un valor inicial
